--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ ghost:
   volumes:
     - .:/ghost
   environment:
-    URL: localhost
+    URL: http://localhost:5000
     DB_USER: root
     DB_PASS: ghost
   links:
