--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "lodash": "3.10.0",
     "moment": "2.10.3",
     "morgan": "1.5.3",
+    "mysql": "2.1.1",
     "node-uuid": "1.4.3",
     "nodemailer": "0.7.1",
     "oauth2orize": "1.0.1",
